<resources>
    <string name="app_name">LittlePoem</string>
    <string name="registration_window">Регистрация</string>
    <string name="login_window">Вход в аккаунт</string>
    <string name="login">Логин</string>
    <string name="login_colon">Логин:</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="role">Роль</string>
    <string name="writer">Поэт</string>
    <string name="reader">Читатель</string>
    <string name="register">Зарегистрироваться</string>
    <string name="login_button">Войти</string>
    <string name="to_login"><u>Уже есть аккаунт (войти)</u></string>
    <string name="to_registration"><u>Зарегистрировать аккаунт</u></string>
    <string name="error_empty_field">Все поля должны быть заполнены</string>
    <string name="error_different_passwords">Введённые пароли не совпадают</string>
    <string name="error_short_password">Длина пароля должна быть 5-30 символов</string>
    <string name="error_wrong_login">Некорректный логин</string>
    <string name="error_wrong_password">Пароль содержит недопустимые символы</string>
    <string name="error_login_already_exists">Логин занят</string>
    <string name="error_logging">Неверный логин или пароль</string>
    <string name="search">Поиск</string>
    <string name="new_poems">Новые</string>
    <string name="my_poems">Мои стихотворения</string>
    <string name="liked_poems">Избранные</string>
    <string name="add">Добавить</string>
    <string name="home_button_title">Главная</string>
    <string name="settings_button_title">Настройки</string>
    <string name="info_button_title">О приложении</string>
    <string name="logout_button_title">Выйти</string>
    <string name="profile_button">Профиль</string>
    <string name="about_app">О приложении</string>
    <string name="creators_title">Авторы</string>
    <string name="creators_text">Идея: Краев Максим\nРазработчик: Краев Максим\nДизайн: Краев Максим</string>
    <string name="change_password"><u>Изменить пароль</u></string>
    <string name="app_settings_title">Приложение</string>
    <string name="notifications_settings_title">Push-уведомления</string>
    <string name="user_agreement_title"><u>Соглашение пользователя</u></string>
    <string name="save_settings">Сохранить изменения</string>
    <string name="send">Отправить</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="publish">Опубликовать</string>
    <string name="reject">Отклонить</string>
    <string name="delete">Удалить</string>
    <string name="current_password">Текущий пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="user_name">Имя</string>
    <string name="user">Пользователь</string>
    <string name="error_wrong_name">Некорректное имя</string>
    <string name="error_wrong_current_password">Неверный текущий пароль</string>
    <string name="error_main_fragment">Ошибка\nНе удалось войти в аккаунт</string>
    <string name="error_empty_complaint_text">Укажите причину жалобы</string>
    <string name="change_settings_success">Данные успешно обновлены</string>
    <string name="new_poem_page_title">Новое стихотворение</string>
    <string name="poem_name_title_colon">Название:</string>
    <string name="poem_author_title_colon">Автор:</string>
    <string name="poem_genre_title_colon">Жанр:</string>
    <string name="poem_rating_title_colon">Рейтинг:</string>
    <string name="poem_date_title_colon">Дата публикации:</string>
    <string name="poem_name_title">Название</string>
    <string name="poem_author_title">Автор</string>
    <string name="poem_genre_title">Жанр</string>
    <string name="poem_description_title">Описание</string>
    <string name="poem">Стихотворение</string>
    <string name="poems">Стихотворения</string>
    <string name="review">Отзыв</string>
    <string name="reviews">Отзывы</string>
    <string name="reviews_underline"><u>Отзывы</u></string>
    <string name="complaints">Жалобы</string>
    <string name="complaint">Жалоба</string>
    <string name="complaint_text">Причина жалобы</string>
    <string name="input_your_poem_text">Введите текст своего стихотворения\n\n\n\n\n\n\n\n\n\n</string>
    <string-array name="poetry_genres">
        <item>Ода</item>
        <item>Гимн</item>
        <item>Элегия</item>
        <item>Сонет</item>
        <item>Послание</item>
        <item>Мадригал</item>
        <item>Романс</item>
        <item>Эпиграмма</item>
        <item>Сатира</item>
        <item>Пастораль</item>
        <item>Стансы</item>
        <item>Былина</item>
        <item>Басня</item>
        <item>Притча</item>
        <item>Баллада</item>
        <item>Дума</item>
        <item>Поэма</item>
        <item>Исповедь</item>
    </string-array>
    <string name="draft_saved">Черновик сохранён до перезапуска приложения</string>
    <string name="need_moderation">В ожидании проверки</string>
    <string name="successfully_sent_on_moderation_poem">Стихотворение успешно отправлено на модерацию</string>
    <string name="successfully_published_poem">Стихотворение успешно опубликовано</string>
    <string name="successfully_rejected_poem">Стихотворение успешно отклонено</string>
    <string name="moderator">Модератор</string>
    <string name="confirm_send_poem_to_moderation">Вы уверены, что хотите отправить стихотворение на модерацию?</string>
    <string name="confirm_change_settings">Вы уверены, что хотите изменить данные профиля?</string>
    <string name="confirm_publish_poem">Вы уверены, что хотите опубликовать стихотворение?</string>
    <string name="confirm_reject_poem">Вы уверены, что хотите отклонить стихотворение?</string>
    <string name="confirm_delete_poem">Вы уверены, что хотите удалить стихотворение?</string>
    <string name="yes_button">Да</string>
    <string name="moderate_title">Проверка</string>
    <string name="poem_has_been_rejected">Отклонено</string>
    <string name="published">Опубликованные</string>
    <string name="rejected">Отклонённые</string>
    <string name="successfully_liked">Стихотворение добавлено в избранные</string>
    <string name="successfully_unliked">Стихотворение удалено из избранных</string>
    <string name="successfully_copied">Текст стихотворения скопирован</string>
    <string name="successfully_complaint">Жалоба успешно отправлена</string>
    <string name="successfully_deleted_poem">Стихотворение успешно удалено</string>
    <string name="poem_deleted">Стихотворение удалено</string>
    <string name="deleted">Удалено</string>
    <string name="deleted_poems">Удалённые</string>
</resources>