<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/dark">

    <TextView
        android:id="@+id/moderate_title"
        android:textIsSelectable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:gravity="center"
        android:text="@string/moderate_title"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="3sp"
        android:layout_below="@id/moderate_title"
        android:layout_marginTop="5sp"
        android:background="@color/blue" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/divider1"
        android:layout_marginBottom="15sp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark">

            <TextView
                android:id="@+id/poem_description_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:gravity="center"
                android:text="@string/poem_description_title"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/poem_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/poem_description_title"
                android:layout_marginTop="10sp"
                android:layout_marginStart="15sp"
                android:text="@string/poem_name_title_colon"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/poem_name"
                android:textIsSelectable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/poem_name_title"
                android:layout_toEndOf="@id/poem_name_title"
                android:layout_marginStart="10sp"
                android:text="@string/poem_name_title"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/grey"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/poem_genre_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/poem_name"
                android:layout_marginTop="10sp"
                android:layout_marginStart="15sp"
                android:text="@string/poem_genre_title_colon"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/poem_genre"
                android:textIsSelectable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/poem_genre_title"
                android:layout_alignStart="@id/poem_name"
                android:text="@string/poem_genre_title"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/grey"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/poem_author_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/poem_genre_title"
                android:layout_marginTop="10sp"
                android:layout_marginStart="15sp"
                android:text="@string/poem_author_title_colon"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/poem_author"
                android:textIsSelectable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/poem_author_title"
                android:layout_alignStart="@id/poem_name"
                android:text="@string/poem_author_title"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/grey"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/poem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/poem_author"
                android:layout_marginTop="10sp"
                android:gravity="center"
                android:text="@string/poem"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/poem_text"
                android:textIsSelectable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/poem"
                android:layout_marginTop="10sp"
                android:layout_marginHorizontal="15sp"
                android:gravity="center"
                android:text="@string/poem"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/white"
                android:textSize="22sp" />

        </RelativeLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15sp"
        android:layout_marginBottom="10sp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/publish_button"
            android:layout_width="0sp"
            android:layout_height="60sp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:text="@string/publish" />

        <Button
            android:id="@+id/reject_button"
            android:layout_width="0sp"
            android:layout_height="60sp"
            android:layout_weight="1"
            android:layout_marginStart="20sp"
            android:backgroundTint="@color/grey"
            android:textColor="@color/dark_grey"
            android:fontFamily="sans-serif-black"
            android:text="@string/reject" />

    </LinearLayout>

</RelativeLayout>