<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark">

    <TextView
        android:id="@+id/page_title"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_marginTop="5sp"
        android:gravity="center"
        android:text="@string/about_app"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3sp"
        android:layout_below="@id/page_title"
        android:layout_marginTop="5sp"
        android:background="@color/blue" />

    <TextView
        android:id="@+id/creators_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:text="@string/creators_title"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/creators_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/creators_title"
        android:layout_marginTop="10sp"
        android:gravity="left"
        android:layout_marginHorizontal="15sp"
        android:text="@string/creators_text"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/white"
        android:textSize="20sp" />

</RelativeLayout>