<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark">

    <TextView
        android:id="@+id/page_title"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_marginTop="5sp"
        android:gravity="center"
        android:text="@string/settings_button_title"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3sp"
        android:layout_below="@id/page_title"
        android:layout_marginTop="5sp"
        android:background="@color/blue" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/divider">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/profile_settings_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:gravity="center"
                android:text="@string/profile_button"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="90sp"
                android:layout_height="90sp"
                android:layout_below="@id/profile_settings_title"
                android:layout_marginTop="10sp"
                android:layout_marginStart="20sp"
                android:elevation="12sp"
                app:cardCornerRadius="50sp">
                <ImageView
                    android:id="@+id/profile_picture"
                    android:layout_width="90sp"
                    android:layout_height="90sp"
                    android:src="@drawable/ic_profile_empty" />
            </androidx.cardview.widget.CardView>

            <EditText
                android:id="@+id/edit_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/cardView"
                android:layout_toEndOf="@id/cardView"
                android:layout_marginStart="15sp"
                android:layout_marginTop="15sp"
                android:background="@null"
                android:fontFamily="sans-serif-medium"
                android:text="@string/login"
                android:inputType="textPersonName|textCapWords"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <ImageView
                android:id="@+id/edit_name_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/edit_name_text"
                android:layout_toEndOf="@id/edit_name_text"
                android:layout_marginStart="5sp"
                android:src="@drawable/ic_edit_button" />

            <TextView
                android:id="@+id/role_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/cardView"
                android:layout_toEndOf="@id/cardView"
                android:layout_marginStart="15sp"
                android:layout_marginBottom="15sp"
                android:fontFamily="sans-serif-light"
                android:text="@string/role"
                android:textColor="@color/grey"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardView"
                android:layout_marginTop="10sp"
                android:layout_marginStart="20sp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/login_colon"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/login_title"
                android:layout_alignBottom="@id/login_title"
                android:layout_marginStart="10sp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/login"
                android:textColor="@color/grey"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_current_password"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_below="@id/login_text"
                android:layout_marginHorizontal="35sp"
                android:layout_marginTop="10sp"
                android:background="@null"
                android:hint="@string/current_password"
                android:inputType="textPassword"
                android:textColorHint="@color/mid_grey"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/input_frame_1"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_below="@id/login_text"
                android:layout_marginHorizontal="20sp"
                android:layout_marginTop="10sp"
                android:src="@drawable/input_frame"/>

            <EditText
                android:id="@+id/edit_new_password"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_below="@id/input_frame_1"
                android:layout_marginHorizontal="35sp"
                android:layout_marginTop="10sp"
                android:background="@null"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:textColorHint="@color/mid_grey"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/input_frame_2"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_below="@id/input_frame_1"
                android:layout_marginHorizontal="20sp"
                android:layout_marginTop="10sp"
                android:src="@drawable/input_frame"/>

            <EditText
                android:id="@+id/edit_repeat_new_password"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_below="@id/input_frame_2"
                android:layout_marginHorizontal="35sp"
                android:layout_marginTop="10sp"
                android:background="@null"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                android:textColorHint="@color/mid_grey"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/input_frame_3"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_below="@id/input_frame_2"
                android:layout_marginHorizontal="20sp"
                android:layout_marginTop="10sp"
                android:src="@drawable/input_frame"/>

            <Button
                android:id="@+id/save_button_1"
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:layout_below="@+id/input_frame_3"
                android:layout_marginHorizontal="30sp"
                android:layout_marginTop="20sp"
                android:fontFamily="sans-serif-black"
                android:text="@string/save_settings" />

            <TextView
                android:id="@+id/app_settings_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/save_button_1"
                android:layout_marginTop="10sp"
                android:gravity="center"
                android:text="@string/app_settings_title"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/notifications_settings_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/app_settings_title"
                android:layout_marginTop="15sp"
                android:layout_marginStart="20sp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/notifications_settings_title"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/notifications_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/notifications_settings_title"
                android:layout_alignBottom="@id/notifications_settings_title"
                android:layout_marginStart="15sp"
                android:checked="true"
                android:scaleX="1.25"
                android:scaleY="1.25"
                android:theme="@style/MainSwitch"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <TextView
                android:id="@+id/user_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/notifications_settings_title"
                android:layout_marginTop="20sp"
                android:layout_marginStart="20sp"
                android:clickable="true"
                android:fontFamily="sans-serif-medium"
                android:text="@string/user_agreement_title"
                android:textColor="@color/blue"
                android:textSize="20sp" />

            <Button
                android:id="@+id/save_button_2"
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:layout_below="@+id/user_agreement"
                android:layout_marginHorizontal="30sp"
                android:layout_marginTop="20sp"
                android:fontFamily="sans-serif-black"
                android:text="@string/save_settings" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>